kubernetes/observability/seq/svc-nodeport.yml
---
apiVersion: v1
kind: Service
metadata:
  name: seq-nodeport-svc
  namespace: observability
spec:
  type: NodePort
  selector:
    app: seq
    release: seq
  ports:
    - protocol: TCP
      port: 80
      targetPort: ui
      nodePort: 30007
